fixing ellipsis product-grid elements on mobile and adding a different product photo

--- a/apps/foundation-app/src/app/product/components/product-card/product-card.component.scss
+++ b/apps/foundation-app/src/app/product/components/product-card/product-card.component.scss
@@ -7,7 +7,7 @@
   border: none;
 
   &__detail {
-    padding: 15px 15px 0 15px;
+    padding: 15px;
   }
 
   &__brand {
